finished formatting up to quick start section

--- a/cherrytree_manual.ctb_HTML/Nodes.html
+++ b/cherrytree_manual.ctb_HTML/Nodes.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Nodes</u></b></h1><br /><h1>Nodes</h1><br /><br /><h2>	Content</h2><br />	• <a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a><br />	• <a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a><br /><br /><br />	A tree is a data structure consisting of nodes which are connected by edges. In the tree shown in <a href="http://#figure-6.01">Figure 6.01</a>, my_book is the root node. Part 3 is one of three child nodes that belong to my_book and is also the parent node of Chapter 6.<br />	<br />	Figure 6.01<br />	<img src="images\11-1.png" alt="images\11-1.png" /><br />	<br />	<a href="http://#figure-6.01">Figure 6.01</a> might look like <a href="http://#figure-6.02">Figure 6.02</a> in Cherrytree, where the document name represents the root node.<br /><br />	Figure 6.02<br />	<img src="images\11-2.png" alt="images\11-2.png" /><br /></div></div>
+<div class="page"><h1><b><u>Nodes</u></b></h1><br /><h1>Nodes</h1><br /><br />	A tree is a data structure consisting of nodes which are connected by edges. In the tree shown in <a href="http://#figure-6.01">Figure 6.01</a>, my_book is the root node. Part 3 is one of three child nodes that belong to my_book and is also the parent node of Chapter 6.<br />	<br />	Figure 6.01<br />	<img src="images\11-1.png" alt="images\11-1.png" /><br />	<br />	<a href="http://#figure-6.01">Figure 6.01</a> might look like <a href="http://#figure-6.02">Figure 6.02</a> in Cherrytree, where the document name represents the root node.<br /><br />	Figure 6.02<br />	<img src="images\11-2.png" alt="images\11-2.png" /><br />	<br />	<h2>	Content</h2><br />	• <a href="Nodes--Creating_Nodes.html">Creating Nodes</a><br />	• <a href="Nodes--Managing_Nodes.html">Managing Nodes</a><br /></div></div>
 </body></html>
