--- a/cherrytree_manual.ctb_HTML/Objects--Anchors.html
+++ b/cherrytree_manual.ctb_HTML/Objects--Anchors.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Anchors</u></b></h1>Anchors<br />An anchor is represented by the icon shown in <a href="http://#figure-8.02">Figure 8.02</a> and can be referenced in a link to direct a user to a particular place within a node.<br />Figure 8.02<img src="images\42-1.png" alt="images\42-1.png" /><br /><br /><a name="h3-50"></a><h3>Inserting Anchors</h3><br />1. Select Insert Anchor from the Edit menu to display Insert Anchor menu.<br /><br />2. Provide a name for the anchor.<br /><br />3. Click OK to complete the insertion.<br /><br /><br /><a name="h3-51"></a><h3>Referencing Anchors</h3><br />When <a href="http://#_inserting_a_link">inserting a link</a>, select the To Node option and add the name of the anchor to the Anchor Name textbox. Hovering over an anchor will display its name.<br /><br /><a name="h3-52"></a><h3>Editing Anchors</h3><br />Right-click an anchor icon to display is options.<br />• Cut Anchor - Moves the selected anchor to your clipboard. The anchor can then be pasted elsewhere.<br /><br />• Copy Anchor - Copies the selected anchor to your clipboard. The copy can then be pasted elsewhere.<br /><br />• Delete Anchor - Deletes the selected anchor.<br /><br />• Edit Anchor - Displays the Insert Anchor menu allowing you to rename the anchor.</div></div>
+<div class="page"><h1><b><u>Anchors</u></b></h1><br /><h1>Anchors</h1><br /><br /><br />	An anchor is represented by the icon shown in <a href="Objects--Anchors.html#figure-8.02">Figure 8.02</a> and can be referenced in a link to direct a user to a particular place within a node.<br />	<br />	<a name="figure-8.02"></a> Figure 8.02<br />	<img src="images\42-1.png" alt="images\42-1.png" /><br /><br /><a name="h2-1"></a><h2>Inserting Anchors</h2><br /><br />	1. Select<strong> Insert Ancho</strong>r from the <strong>Edit</strong> menu to display <strong>Insert Anchor</strong> menu.<br /><br />	2. Provide a name for the anchor.<br /><br />	3. Click <strong>OK</strong> to complete the insertion.<br /><br /><br /><a name="h2-2"></a><h2>Referencing Anchors</h2><br /><br />	When <a href="http://#_inserting_a_link">inserting a link</a>, select the To Node option and add the name of the anchor to the Anchor Name textbox. Hovering over an anchor will display its name.<br /><br /><a name="h2-3"></a><h2>Editing Anchors</h2><br /><br />	Right-click an anchor icon to display is options.<br /><br />	• <strong>Cut Anchor </strong>- Moves the selected anchor to your clipboard. The anchor can then be pasted elsewhere.<br /><br />	• <strong>Copy Anchor</strong> - Copies the selected anchor to your clipboard. The copy can then be pasted elsewhere.<br /><br />	• <strong>Delete Anchor</strong> - Deletes the selected anchor.<br /><br />	• <strong>Edit Anchor</strong> - Displays the Insert Anchor menu allowing you to rename the anchor.</div></div>
 </body></html>
