--- a/cherrytree_manual.ctb_HTML/Objects--Horizontal_Rule.html
+++ b/cherrytree_manual.ctb_HTML/Objects--Horizontal_Rule.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Horizontal Rule</u></b></h1>Horizontal Rule<br />By default, this feature inserts a line of 33 <code>~</code> characters one line below the selected line. An empty line is inserted one line below the horizontal rule.<br /><table class="table"><col/><col/><tr><th>click me</th><th>click me</th></tr><tr><td></td><td>These characters are not converted to a horizontal rule when exported.</td></tr></table><br /><br /><a name="h3-62"></a><h3>Configuring Horizontal Rules</h3><br />The horizontal rule can be configured in the <a href="http://#_text_and_code">text and code preference menu</a> to insert any sequence of characters.<br /><br /><a name="h3-63"></a><h3>Inserting a Horizontal Rule</h3><br />Select Insert Horizontal Rule from the Edit menu to insert a horizontal rule.</div></div>
+<div class="page"><h1><b><u>Horizontal Rule</u></b></h1><br /><h1>Horizontal Rule</h1><br /><br /><br />	By default, this feature inserts a line of 33 <strong>~</strong> characters one line below the selected line. An empty line is inserted one line below the horizontal rule.<br />	<br />	<strong>NOTE:</strong> These characters are not converted to a horizontal rule when exported.<br /><br /><a name="h2-1"></a><h2>Configuring Horizontal Rules</h2><br /><br />	The horizontal rule can be configured in the <a href="Settings--Text_and_Code.html">text and code preference menu</a> to insert any sequence of characters.<br /><br /><a name="h2-2"></a><h2>Inserting a Horizontal Rule</h2><br /><br />	Select Insert Horizontal Rule from the Edit menu to insert a horizontal rule.</div></div>
 </body></html>
