--- a/cherrytree_manual.ctb_HTML/Quick_Start--Node_Management.html
+++ b/cherrytree_manual.ctb_HTML/Quick_Start--Node_Management.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Node Management</u></b></h1><br /><h1>Node Management</h1><br /><br /><br />	Cherrytree allows you to organize notes using a tree structure.<br /><br /><h2>Creating Your First Node</h2><br /><br />	1. Click Tree &gt; Add Node to display the New Node Properties menu.<br /><br />	2. Enter a Node Name.<br /><br />	3. Select a Node Type then click OK.<br /><br />		<strong>NOTE:</strong> View 7. Text of this manual for details about Node Type.<br /><br /><h2>Node Menu</h2><br /><br />	Right-click a node to display a menu of the options available to it.<br />	<br />	Commonly used options include:<br /><br />		• <strong>Add Node</strong> - Creates a node on the same hierarchical level as your selected node.<br /><br />		• <strong>Add SubNode</strong> - Creates a child node under the selected node.<br /><br />		• <strong>Change Node Properties</strong> - Edit the settings of the current node.<br /><br />		• <strong>Delete Node </strong>- Deletes the selected node.<br /><br />	See <a href="Files--Nodes.html">Nodes</a> for more detail.</div></div>
+<div class="page"><h1><b><u>Node Management</u></b></h1><br /><h1>Node Management</h1><br /><br /><br />	Cherrytree allows you to organize notes using a tree structure.<br /><br /><a name="h2-1"></a> <h2>Creating Your First Node</h2><br /><br />	1. Click<strong> Tree</strong> &gt; <strong>Add Node</strong> to display the <strong>New Node Properties</strong> menu.<br /><br />	2. Enter a <strong>Node Name</strong>.<br /><br />	3. Select a <strong>Node Type</strong> then click <strong>OK</strong>.<br /><br />		<strong>NOTE:</strong> View <a href="Text.html">Text</a> of this manual for details about <strong>Node Type</strong>.<br /><br /><a name="h2-2"></a> <h2>Node Menu</h2><br /><br />	Right-click a node to display a menu of the options available to it.<br />	<br />	Commonly used options include:<br /><br />	• <strong>Add Node</strong> - Creates a node on the same hierarchical level as your selected node.<br /><br />	• <strong>Add SubNode</strong> - Creates a child node under the selected node.<br /><br />	• <strong>Change Node Properties</strong> - Edit the settings of the current node.<br /><br />	• <strong>Delete Node </strong>- Deletes the selected node.<br /><br />	See <a href="Nodes.html">Nodes</a> for more detail.<br />	</div></div>
 </body></html>
