--- a/cherrytree_manual.ctb_HTML/Settings--Fonts.html
+++ b/cherrytree_manual.ctb_HTML/Settings--Fonts.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Fonts</u></b></h1> Fonts<br />• Rich Text - Defines the default font family, style, and size applied to Rich Text.<br /><br />• Plain Text - Defines the default font family, style, and size applied to Plain Text.<br /><br />• Code Font - Defines the default font family, style, and size applied to syntax-highlighted text.<br /><br />• Tree Font - Defines the default font family, style, and size applied to text within the <a href="http://#tree-view">tree view</a>.<br /></div></div>
+<div class="page"><h1><b><u>Fonts</u></b></h1><br /><h1>Fonts</h1><br /><br /><br />• Rich Text - Defines the default font family, style, and size applied to Rich Text.<br /><br />• Plain Text - Defines the default font family, style, and size applied to Plain Text.<br /><br />• Code Font - Defines the default font family, style, and size applied to syntax-highlighted text.<br /><br />• Tree Font - Defines the default font family, style, and size applied to text within the <a href="http://#tree-view">tree view</a>.<br /></div></div>
 </body></html>
