--- a/cherrytree_manual.ctb_HTML/Settings--Links.html
+++ b/cherrytree_manual.ctb_HTML/Settings--Links.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Links</u></b></h1>Links<br /><br /><a name="h3-88"></a><h3>Custom Actions</h3><br />• Enable Custom Web Link Click Action - Defines a custom command to run when a web link is clicked within Cherrytree.<br /><br />• Enable Custom File Link Clicked Action -  Defines a custom command to run when a file link is clicked within Cherrytree.<br /><br />• Enable Custom Folder Link Clicked Action -  Defines a custom command to run when a folder link is clicked within Cherrytree.<br /><br /><br /><a name="h3-89"></a><h3>Colors</h3><br />• To Website - Defines the default text color of links to websites.<br /><br />• To File - Defines the default text color of links to files.<br /><br />• To Node - Defines the default text color of links to nodes.<br /><br />• To Folder - Defines the default text color of links to folders.<br /><br /><br /><a name="h3-90"></a><h3>Miscellaneous</h3><br />• Underline Links - Apply the <span style="text-decoration:underline;">underline</span> property to all links by default.<br /><br />• Use Relative Paths for Files and Folders - When defining paths for links, use link addresses that are relative to the directory containing the current working document.<br /><table class="table"><col/><col/><tr><th>click me</th><th>click me</th></tr><tr><td></td><td>Click here for more information about relative paths.</td></tr></table><br /><br />• Anchor Size - Defines the size of <a href="http://#_anchors">anchor</a> icons.<br /></div></div>
+<div class="page"><h1><b><u>Links</u></b></h1><br /><h1>Links</h1><br /><br /><br /><a name="h2-1"></a><h2>Custom Actions</h2><br /><br />	• <strong>Enable Custom Web Link Click Action</strong> - Defines a custom command to run when a web link is clicked within Cherrytree.<br /><br />	• <strong>Enable Custom File Link Clicked Action</strong> -  Defines a custom command to run when a file link is clicked within Cherrytree.<br /><br />	• <strong>Enable Custom Folder Link Clicked Action</strong> -  Defines a custom command to run when a folder link is clicked within Cherrytree.<br /><br /><br /><a name="h2-2"></a><h2>Colors</h2><br /><br />	• <strong>To Website</strong> - Defines the default text color of links to websites.<br /><br />	•<strong> To File</strong> - Defines the default text color of links to files.<br /><br />	• <strong>To Node</strong> - Defines the default text color of links to nodes.<br /><br />	• <strong>To Folder</strong> - Defines the default text color of links to folders.<br /><br /><br /><a name="h2-3"></a><h2>Miscellaneous</h2><br /><br />	• <strong>Underline Links</strong> - Apply the <span style="text-decoration:underline;">underline</span> property to all links by default.<br /><br />	• <strong>Use Relative Paths for Files and Folders</strong> - When defining paths for links, use link addresses that are relative to the directory containing the current working document.<br /><br />			<strong>NOTES:</strong> Click here for more information about relative paths.<br /><br />	• <strong>Anchor Size</strong> - Defines the size of <a href="http://#_anchors">anchor</a> icons.<br /></div></div>
 </body></html>
