--- a/cherrytree_manual.ctb_HTML/Settings--Toolbar.html
+++ b/cherrytree_manual.ctb_HTML/Settings--Toolbar.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Toolbar</u></b></h1>Toolbar<br />The Toolbar preferences menu provides configuration options for the <a href="http://#toolbar">toolbar</a> panel.<br /><br /><a name="h3-92"></a><h3>Adding Actions to the Toolbar</h3><br />1. Click the <code>+</code> icon, shown in <a href="http://#figure-9.13">Figure 9.13</a> to display the Select Element to Add window.<br />Figure 9.13<img src="images\55-1.png" alt="images\55-1.png" /><br /><br />2. Select an action to add.<br /><table class="table"><col/><col/><tr><th>click me</th><th>click me</th></tr><tr><td></td><td>The --------- option represents a vertical divider in the toolbar.</td></tr></table><br /><br />3. Click OK to complete the addition.<br /><br />The action can then be dragged up or down to determine its position on the toolbar. Actions are organized from top to bottom in the Toolbar preferences menu, which translates to left to right in the actual <a href="http://#toolbar">toolbar</a>.<br /><br /><a name="h3-93"></a><h3>Removing Actions from the Toolbar</h3><br />1. Select an action.<br /><br />2. Click the <code>-</code> icon to remove the selected action from the <a href="http://#toolbar">toolbar</a>.<br />Figure 9.14<img src="images\55-2.png" alt="images\55-2.png" /><br /><br /><br /><a name="h3-94"></a><h3>Reset Toolbar Settings</h3><br />Click the yellow return button to return to Cherrytree’s default toolbar settings.<br />Figure 9.15<img src="images\55-3.png" alt="images\55-3.png" /><br /></div></div>
+<div class="page"><h1><b><u>Toolbar</u></b></h1><br /><h1>Toolbar</h1><br /><br /><br />	The <strong>Toolbar</strong> preferences menu provides configuration options for the <a href="http://#toolbar">toolbar</a> panel.<br /><br /><a name="h2-1"></a><h2>Adding Actions to the Toolbar</h2><br /><br />	1. Click the <strong><code>+</code></strong> icon, shown in <a href="http://#figure-9.13">Figure 9.13</a> to display the Select Element to Add window.<br />	<br />		Figure 9.13<br />		<img src="images\55-1.png" alt="images\55-1.png" /><br /><br />	2. Select an action to add.<br />	<br />		<strong>NOTE</strong>: The --------- option represents a vertical divider in the toolbar.<br /><br />	3. Click<strong> OK</strong> to complete the addition.<br /><br />	The action can then be dragged up or down to determine its position on the toolbar. Actions are organized from top to bottom in the Toolbar preferences menu, which translates to left to right in the actual <a href="http://#toolbar">toolbar</a>.<br /><br /><a name="h2-2"></a><h2>Removing Actions from the Toolbar</h2><br /><br />	1. Select an action.<br /><br />	2. Click the <strong><code>-</code></strong> icon to remove the selected action from the <a href="http://#toolbar">toolbar</a>.<br />	<br />		Figure 9.14<br />		<img src="images\55-2.png" alt="images\55-2.png" /><br /><br /><br /><a name="h2-3"></a><h2>Reset Toolbar Settings</h2><br /><br />	Click the yellow return button to return to Cherrytree’s default toolbar settings.<br /><br />	Figure 9.15<br />	<img src="images\55-3.png" alt="images\55-3.png" /><br /></div></div>
 </body></html>
