--- a/cherrytree_manual.ctb_HTML/Settings--Tree_1.html
+++ b/cherrytree_manual.ctb_HTML/Settings--Tree_1.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Tree 1</u></b></h1>Tree 1<br />The Tree 1 preferences menu provides configuration options for the <a href="http://#tree-view">tree view</a> panel.<br /><br /><a name="h3-81"></a><h3>Theme</h3><br />• Light Background, Dark Text - Sets the tree view background color to white and text color to black.<br /><br />• Dark Background, Light Text - Sets the tree view background color to dark blue and text color to white.<br /><br />• Custom Background and Text - Defines custom colors for the editor’s background and text.<br /><br /><br /><a name="h3-82"></a><h3>Default Text Nodes Icons</h3><br />• Use Different Cherries per Level - Assigns a unique, default icon to each group of nodes sharing the same hierarchical level within a node structure.<br /><br />• Use Selected Icon - Assigns one icon to be the default icon for all nodes.<br /><br />• No Icon - Prevents Cherrytree from assigning icons to nodes by default.<br /><br />• Hide Right Side Auxiliary Icon - Hides icons regarding a node’s status, such as the Read Only and Bookmarked icons.<br /><br /><table class="table"><col/><col/><tr><th>click me</th><th>click me</th></tr><tr><td></td><td>Default icons can be overwritten within the Use Selected Icon option of a node’s property menu.</td></tr></table><br /><br /><a name="h3-83"></a><h3>Node Status at Startup</h3><br />• Restore Expanded/Collapsed Status - Nodes of a document retain their expand/collapse state after the document is closed and opened again.<br /><br />• Expand all Nodes - All nodes expand when Cherrytree starts.<br /><br />• Collapse all Nodes - All nodes collapse when Cherrytree starts.<br /><br />• Nodes in Bookmarks Always Visible - <a href="https://docs.oracle.com/cd/E19509-01/820-3742/ghpow/index.html">Parents</a> of bookmarked nodes expand on startup so that all bookmarked nodes are visible within the <a href="http://#tree-view">tree view</a>.</div></div>
+<div class="page"><h1><b><u>Tree 1</u></b></h1><br /><h1>Tree 1</h1><br /><br /><br />	The T<strong>ree 1</strong> preferences menu provides configuration options for the <a href="http://#tree-view">tree view</a> panel.<br /><br /><a name="h2-1"></a><h2>Theme</h2><br /><br />	• <strong>Light Background, Dark Text</strong> - Sets the tree view background color to white and text color to black.<br /><br />	• <strong>Dark Background, Light Text </strong>- Sets the tree view background color to dark blue and text color to white.<br /><br />	• <strong>Custom Background and Text</strong> - Defines custom colors for the editor’s background and text.<br /><br /><a name="h2-2"></a><h2>Default Text Nodes Icons</h2><br /><br />	•<strong> Use Different Cherries per Level </strong>- Assigns a unique, default icon to each group of nodes sharing the same hierarchical level within a node structure.<br /><br />	• <strong>Use Selected Icon </strong>- Assigns one icon to be the default icon for all nodes.<br /><br />	•<strong> No Icon</strong> - Prevents Cherrytree from assigning icons to nodes by default.<br /><br />	• <strong>Hide Right Side Auxiliary Icon</strong> - Hides icons regarding a node’s status, such as the Read Only and Bookmarked icons.<br /><br />	<strong>NOTE: </strong>Default icons can be overwritten within the Use Selected Icon option of a node’s property menu.<br /><br /><a name="h2-3"></a><h2>Node Status at Startup</h2><br /><br />	• <strong>Restore Expanded/Collapsed Status</strong> - Nodes of a document retain their expand/collapse state after the document is closed and opened again.<br /><br />	• <strong>Expand all Nodes</strong> - All nodes expand when Cherrytree starts.<br /><br />	• <strong>Collapse all Nodes</strong> - All nodes collapse when Cherrytree starts.<br /><br />	• <strong>Nodes in Bookmarks Always Visible</strong> - <a href="https://docs.oracle.com/cd/E19509-01/820-3742/ghpow/index.html">Parents</a> of bookmarked nodes expand on startup so that all bookmarked nodes are visible within the <a href="http://#tree-view">tree view</a>.<br />	</div></div>
 </body></html>
