--- a/cherrytree_manual.ctb_HTML/Text.html
+++ b/cherrytree_manual.ctb_HTML/Text.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Text</u></b></h1><br />▸ <a href="Text.html">Text</a><br />  ▸ <a href="Text--Plain_Text.html">Plain Text</a><br />  ▸ <a href="Text--Rich_Text.html">Rich Text</a><br />  ▸ <a href="Text--Automatic_Syntax_Highlighting.html">Automatic Syntax Highlighting</a><br />  ▸ <a href="Text--Editing.html">Editing</a><br />  ▸ <a href="Text--Formatting.html">Formatting</a><br />  ▸ <a href="Text--Search.html">Search</a><br /><br />Text<br />Cherrytree supports three types of nodes, <a href="http://#_plain_text">Plain Text</a>, <a href="http://#_rich_text">Rich Text</a>, and <a href="http://#_automatic_syntax_highlighting">Automatic Syntax Highlighting</a>.<br /></div></div>
+<div class="page"><h1><b><u>Text</u></b></h1><br /><h1>Text</h1><br /><br /><br />	Cherrytree supports three types of nodes, <a href="http://#_plain_text">Plain Text</a>, <a href="http://#_rich_text">Rich Text</a>, and <a href="http://#_automatic_syntax_highlighting">Automatic Syntax Highlighting</a>.<h2>	<br />	<br />	Content</h2><br />	• <a href="Text--Plain_Text.html">Plain Text</a><br />	• <a href="Text--Rich_Text.html">Rich Text</a><br />	• <a href="Text--Automatic_Syntax_Highlighting.html">Automatic Syntax Highlighting</a><br />	• <a href="Text--Editing.html">Editing</a><br />	• <a href="Text--Formatting.html">Formatting</a><br />	• <a href="Text--Search.html">Search</a><br /><br />	<br />	<br /><br /><br /><br /></div></div>
 </body></html>
