--- a/cherrytree_manual.ctb_HTML/Building_from_Source.html
+++ b/cherrytree_manual.ctb_HTML/Building_from_Source.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Building from Source</u></b></h1><br /><br /><h1>Building from Source</h1><br /><br /><span style="color:#bb0a0a;">	</span><h2>Content</h2><br />	• <a href="Building_from_Source--Fedora_(Red_Hat).html">Fedora (Red Hat)</a><br />	• <a href="Building_from_Source--Ubuntu_(Debian).html">Ubuntu (Debian)</a><br />	• <a href="Building_from_Source--WIndows.html">WIndows</a><br />	• <a href="Building_from_Source--macOS_(Not_Tested).html">macOS (Not Tested)</a><br /><br /></div></div>
+<div class="page"><h1><b><u>Building from Source</u></b></h1><br /><br /><h1>Building from Source</h1><br /><br /><span style="color:#bb0a0a;">	</span><h2>Content</h2><br />	• <a href="Building_from_Source--Fedora_(Red_Hat).html">Fedora (Red Hat)</a><br />	• <a href="Building_from_Source--Ubuntu_(Debian).html">Ubuntu (Debian)</a><br />	• <a href="Building_from_Source--WIndows.html">Windows</a><br />	• <a href="Building_from_Source--macOS_(Not_Tested).html">macOS (Not Tested)</a><br /><br /></div></div>
 </body></html>
