--- a/cherrytree_manual.ctb_HTML/Files--Command_Line.html
+++ b/cherrytree_manual.ctb_HTML/Files--Command_Line.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -96,7 +97,7 @@
 </div>
 <div class="page"><h1><b><u>Command Line</u></b></h1><br /><h1>Command Line</h1><br /><br /><br />	Cherrytree supports command line argument for starting the application via command line.<br /><br /><a name="h3-13"></a> <h2>Cherrytree Command</h2><br /><br />		<table class="table"><col/><col/><tr><th>Command</th><th>Description</th></tr><tr><td>python2 cherrytree
 </td><td>Opens Cherrytree.
-</td></tr></table><br /><br /><a name="h3-14"></a> <h2>Positional Arguments</h2><br /><br />		<table class="table"><col/><col/><tr><th>Argument</th><th>Description</th></tr><tr><td>filepath
+</td></tr></table><br /><br /><a name="h3-14"></a><span style="color:#bb0a0a;"> </span><h2>Positional Arguments</h2><br /><br />		<table class="table"><col/><col/><tr><th>Argument</th><th>Description</th></tr><tr><td>filepath
 </td><td>Defines the document to open in Cherrytree. Replace filepath with the path of a file.
 </td></tr></table><br /><br /><a name="h3-15"></a> <h2>Optional Arguments</h2><br /><br />		<table class="table"><col/><col/><tr><th>Arguements</th><th>Description</th></tr><tr><td>-h
  --help
