--- a/cherrytree_manual.ctb_HTML/Files.html
+++ b/cherrytree_manual.ctb_HTML/Files.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Files</u></b></h1><br /><h1>Files</h1><br /><br /><br />	Documents are managed from the <strong>File</strong> menu or toolbar.<br /><br />		•  <a href="Files--Creating_and_Opening.html">Creating and Opening</a><br />		•  <a href="Files--Saving.html">Saving</a><br />		•  <a href="Files--Page_Setup_and_Printing.html">Page Setup and Printing</a><br />		•  <a href="Files--Importing.html">Importing</a><br />		•  <a href="Files--Exporting.html">Exporting</a><br />		•  <a href="Files--Command_Line.html">Command Line</a><br /></div></div>
+<div class="page"><h1><b><u>Files</u></b></h1><br /><h1>Files</h1><br /><br /><br />	Documents are managed from the <strong>File</strong> menu or toolbar.<br />		<br /><h2>	Content</h2><br />	•  <a href="Files--Creating_and_Opening.html">Creating and Opening</a><br />	•  <a href="Files--Saving.html">Saving</a><br />	•  <a href="Files--Page_Setup_and_Printing.html">Page Setup and Printing</a><br />	•  <a href="Files--Importing.html">Importing</a><br />	•  <a href="Files--Exporting.html">Exporting</a><br />	•  <a href="Files--Command_Line.html">Command Line</a><br /><br />	</div></div>
 </body></html>
