--- a/cherrytree_manual.ctb_HTML/Installation--Fedora_(Red_Hat).html
+++ b/cherrytree_manual.ctb_HTML/Installation--Fedora_(Red_Hat).html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Fedora (Red Hat)</u></b></h1><br /><h1>Fedora (Red Hat)</h1><br /><br /><br />	1. Download the latest installer that has a .rpm extension from the <a href="https://www.giuspen.com/cherrytree/#downl">downloads webpage</a>.<br /><br />	3. Open a terminal and change to the directory containing your installation file.<br /><br />	5. Enter the following command, replacing <strong>cherrytree.rpm</strong> with the name of your installation file:<br /><br /><div class="codebox"><div class="codebox"><span style="color:#a52a2a;font-weight:700">sudo</span>&nbsp;rpm&nbsp;-Uvh&nbsp;--force&nbsp;cherrytree.rpm</div></div><br /><br />	4. Provide your password when prompted to complete the installation<br /><br /></div></div>
+<div class="page"><h1><b><u>Fedora (Red Hat)</u></b></h1><br /><h1>Fedora (Red Hat)</h1><br /><br /><br />	1. Download the latest installer that has a<strong> .rpm </strong>extension from the <a href="https://www.giuspen.com/cherrytree/#downl">downloads webpage</a>.<br /><br />	2. Open a terminal and change to the directory containing your installation file.<br /><br />	3. Enter the following command, replacing <strong>cherrytree.rpm</strong> with the name of your installation file:<br /><br /><div class="codebox"><div class="codebox"><span style="color:#a52a2a;font-weight:700">sudo</span>&nbsp;rpm&nbsp;-Uvh&nbsp;--force&nbsp;cherrytree.rpm</div></div><br /><br />	4. Provide your password when prompted to complete the installation<br /><br /></div></div>
 </body></html>
