--- a/cherrytree_manual.ctb_HTML/Installation--Windows.html
+++ b/cherrytree_manual.ctb_HTML/Installation--Windows.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Windows</u></b></h1><br /><h1>Windows</h1><br /><br /><br />	1. Download and run the latest installer that has an .<strong>exe</strong> extension from the <a href="https://www.giuspen.com/cherrytree/#downl">downloads webpage</a>.<br /><br />	2. Select a language and click <strong>Next</strong>.<br /><br />	3. Accept the license and click <strong>Next</strong>.<br /><br />	4. Select a directory to install the application to and click <strong>Next</strong>.<br /><br />	5. (Optional) Select <strong>Create a desktop shortcut</strong> to create a shortcut to the application during the installation process.<br /><br />	6. Click <strong>Next</strong>.<br /><br />	7. Review the provided summary then click <strong>Install</strong>.<br /><br />	8. Click<strong> Finish</strong> to complete the installation.<br /><br />    <strong>NOTE:</strong> If a new version of Cherrytree is installed over a previous version, an error may occur when trying to overwrite dbus-daemon.exe. If so, skip the overwrite and restart your computer, then try again.</div></div>
+<div class="page"><h1><b><u>Windows</u></b></h1><br /><h1>Windows</h1><br /><br /><br />	1. Download and run the latest installer that has an .<strong>exe</strong> extension from the <a href="https://www.giuspen.com/cherrytree/#downl">downloads webpage</a>.<br /><br />	2. Select a language and click <strong>Next</strong>.<br /><br />	3. Accept the license and click <strong>Next</strong>.<br /><br />	4. Select a directory to install the application to and click <strong>Next</strong>.<br /><br />	5. (<strong>Optional</strong>) Select <strong>Create a desktop shortcut</strong> to create a shortcut to the application during the installation process.<br /><br />	6. Click <strong>Next</strong>.<br /><br />	7. Review the provided summary then click <strong>Install</strong>.<br /><br />	8. Click<strong> Finish</strong> to complete the installation.<br /><br />    <strong>NOTE:</strong> If a new version of Cherrytree is installed over a previous version, an error may occur when trying to overwrite <strong>dbus-daemon.exe</strong>. If so, skip the overwrite and restart your computer, then try again.</div></div>
 </body></html>
