--- a/cherrytree_manual.ctb_HTML/Objects--Files.html
+++ b/cherrytree_manual.ctb_HTML/Objects--Files.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Files</u></b></h1>Files<br />Any file that is less than 10MB can be attached to a <a href="http://#_rich_text">Rich Text</a> node. <a href="http://#_rich_text">Rich Text</a> nodes can contain any number of attached files.<br /><br /><a name="h3-44"></a><h3>Inserting a File</h3><br />1. Select Insert File from the Edit menu.<br /><br />2. Select a file and click OK.<br /><table class="table"><col/><col/><tr><th>click me</th><th>click me</th></tr><tr><td></td><td>The file must be less than 10MB.</td></tr></table><br /><br /><br /><a name="h3-45"></a><h3>Editing a File</h3><br />Right-click a node to display its options.<br />• Cut Embedded File - Moves the selected file to your clipboard. The file can then be pasted elsewhere.<br /><br />• Copy Embedded File - Copies the selected file to your clipboard. A copy of the file can then be pasted elsewhere.<br /><br />• Delete Embedded File - Deletes the attached file.<br /><br />• Open File - Opens the attached file.<br /><table class="table"><col/><col/><tr><th>click me</th><th>click me</th></tr><tr><td></td><td>Attached files should be closed before closing their host document(s).</td></tr></table><br /><br />• Save As - Saves a copy of the selected file to your machine.<br /><br /></div></div>
+<div class="page"><h1><b><u>Files</u></b></h1><br /><h1>Files</h1><br /><br /><br />	Any file that is less than 10MB can be attached to a <a href="http://#_rich_text">Rich Text</a> node. <a href="http://#_rich_text">Rich Text</a> nodes can contain any number of attached files.<br /><br /><a name="h2-1"></a><h2>Inserting a File</h2><br /><br />	1. Select <strong>Insert File</strong> from the <strong>Edit</strong> menu.<br /><br />	2. Select a file and click <strong>OK</strong>.<br />	<br />		<strong>	NOTE:</strong> The file must be less than 10MB.<br /><br /><a name="h2-2"></a><h2>Editing a File</h2><br /><br />	Right-click a node to display its options.<br /><br />	• <strong>Cut Embedded File</strong> - Moves the selected file to your clipboard. The file can then be pasted elsewhere.<br /><br />	• <strong>Copy Embedded File</strong> - Copies the selected file to your clipboard. A copy of the file can then be pasted elsewhere.<br /><br />	•<strong> Delete Embedded File</strong> - Deletes the attached file.<br /><br />	• <strong>Open File </strong>- Opens the attached file.<br /><br />		<strong>NOTE:</strong> Attached files should be closed before closing their host document(s).<br /><br />	• <strong>Save As</strong> - Saves a copy of the selected file to your machine.<br /><br /></div></div>
 </body></html>
