--- a/cherrytree_manual.ctb_HTML/Objects--Special_Characters.html
+++ b/cherrytree_manual.ctb_HTML/Objects--Special_Characters.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Special Characters</u></b></h1>Special Characters<br />Cherrytree provides a function for inserting special characters.<br /><table class="table"><col/><col/><tr><th>click me</th><th>click me</th></tr><tr><td></td><td>These characters are not converted to their corresponding HTML codes when exported.</td></tr></table><br /><br /><a name="h3-60"></a><h3>Inserting Special Characters</h3><br />1. Open the Edit menu.<br /><br />2. Hover over Insert Special Character to display its submenu.<br /><br />3. Click the character to be inserted.<br /><br /><table class="table"><col/><col/><tr><th>click me</th><th>click me</th></tr><tr><td></td><td>See the text and code preference menu to add or remove special characters from the special character submenu. This  configuration option can also be referenced for a list of supported special characters.</td></tr></table><br /></div></div>
+<div class="page"><h1><b><u>Special Characters</u></b></h1><br /><h1>Special Characters</h1><br /><br /><br />	Cherrytree provides a function for inserting special characters.<br />	<br /><strong>	NOTE:</strong> These characters are not converted to their corresponding HTML codes when exported.<br /><br /><a name="h2-1"></a><h2>Inserting Special Characters</h2><br /><br />	1. Open the Edit menu.<br /><br />	2. Hover over Insert Special Character to display its submenu.<br /><br />	3. Click the character to be inserted.<br /><br />	See the <a href="Settings--Text_and_Code.html">text and code preference</a> menu to add or remove special characters from the special character submenu. That configuration option can also be referenced for a list of supported special characters.<br /></div></div>
 </body></html>
