--- a/cherrytree_manual.ctb_HTML/Objects--Table_of_Contents.html
+++ b/cherrytree_manual.ctb_HTML/Objects--Table_of_Contents.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Table of Contents</u></b></h1> Table of Contents<br />This feature inserts an unordered, hierarchical list containing a link for every node and header.<br /><br /><a name="h3-54"></a><h3>Inserting a Table of Contents</h3><br />1. Select Insert TOC from the Edit menu to display the Involved Nodes menu.<br /><br />2. Define the scope of the contents to be included.<br />• Selected Node only - Includes only the selected node.<br /><br />• Selected Node and Subnodes - Includes the selected node and its <a href="https://docs.oracle.com/cd/E19509-01/820-3742/ghpow/index.html">children</a>.<br /><br />• All the Tree - Includes the entire document.<br /><br /><br />• Click OK to complete the insertion.<br /><br /><br /><a name="h3-55"></a><h3>Updating a Table of Contents</h3><br />A table of contents does not update as changes are made to the nodes or headers. To update a table of contents, delete the existing TOC and create a new one.<br /></div></div>
+<div class="page"><h1><b><u>Table of Contents</u></b></h1><br /><h1>Table of Contents</h1><br /><br /><br />	This feature inserts an unordered, hierarchical list containing a link for every node and header.<br /><br /><a name="h2-1"></a><h2>Inserting a Table of Contents</h2><br /><br />	1. Select <strong>Insert TOC</strong> from the <strong>Edit</strong> menu to display the I<strong>nvolved Nodes </strong>menu.<br /><br />	2. Define the scope of the contents to be included.<br /><br />		• <strong>Selected Node only</strong> - Includes only the selected node.<br /><br />		• <strong>Selected Node and Subnodes</strong> - Includes the selected node and its <a href="https://docs.oracle.com/cd/E19509-01/820-3742/ghpow/index.html">children</a>.<br /><br />		• <strong>All the Tree</strong> - Includes the entire document.<br /><br /><br />	3. Click <strong>OK</strong> to complete the insertion.<br /><br /><a name="h2-2"></a><h2>Updating a Table of Contents</h2><br /><br />	A table of contents does not update as changes are made to the nodes or headers. To update a table of contents, delete the existing TOC and create a new one.<br /></div></div>
 </body></html>
