--- a/cherrytree_manual.ctb_HTML/Objects--Timestamps.html
+++ b/cherrytree_manual.ctb_HTML/Objects--Timestamps.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Timestamps</u></b></h1>Timestamps<br />By default, this feature inserts the date in time in a format such as YYYY/mm/dd - HH:MM, where Y = year, m = month, d = day, H = hour, and M = minute.<br /><br /><a name="h3-57"></a><h3>Inserting a Timestamp</h3><br />Select Insert Timestamp from the Edit menu to insert a timestamp.<br /><br /><a name="h3-58"></a><h3>Formatting a Timestamp</h3><br />The format of the timestamp can be configured in the <a href="http://#_text_and_code">text and code preference menu</a>.<br /></div></div>
+<div class="page"><h1><b><u>Timestamps</u></b></h1><br /><h1>Timestamps</h1><br /><br /><br />	By default, this feature inserts the date in time in a format such as YYYY/mm/dd - HH:MM, where Y = year, m = month, d = day, H = hour, and M = minute.<br /><br /><a name="h2-1"></a><h2>Inserting a Timestamp</h2><br /><br />	Select Insert Timestamp from the Edit menu to insert a timestamp.<br /><br /><a name="h2-2"></a><h2>Formatting a Timestamp</h2><br /><br />	The format of the timestamp can be configured in the <a href="http://#_text_and_code">text and code preference menu</a>.<br /></div></div>
 </body></html>
