--- a/cherrytree_manual.ctb_HTML/Objects.html
+++ b/cherrytree_manual.ctb_HTML/Objects.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Objects</u></b></h1><br />▸ <a href="Objects.html">Objects</a><br />  ▸ <a href="Objects--Images.html">Images</a><br />  ▸ <a href="Objects--Tables.html">Tables</a><br />  ▸ <a href="Objects--Codebox.html">Codebox</a><br />  ▸ <a href="Objects--Files.html">Files</a><br />  ▸ <a href="Objects--Links.html">Links</a><br />  ▸ <a href="Objects--Anchors.html">Anchors</a><br />  ▸ <a href="Objects--Table_of_Contents.html">Table of Contents</a><br />  ▸ <a href="Objects--Timestamps.html">Timestamps</a><br />  ▸ <a href="Objects--Special_Characters.html">Special Characters</a><br />  ▸ <a href="Objects--Horizontal_Rule.html">Horizontal Rule</a><br /><br />Objects<br />Objects can be inserted from the Edit menu, located in the menu bar. Some objects can also be pasted directly into Cherrytree.</div></div>
+<div class="page"><h1><b><u>Objects</u></b></h1><br /><h1>Objects</h1><br /><br /><br />	Objects can be inserted from the Edit menu, located in the menu bar. Some objects can also be pasted directly into Cherrytree.<br />	<br />	<h2>Content</h2><br />	• <a href="Objects--Images.html">Images</a><br />	• <a href="Objects--Tables.html">Tables</a><br />	• <a href="Objects--Codebox.html">Codebox</a><br />	• <a href="Objects--Files.html">Files</a><br />	• <a href="Objects--Links.html">Links</a><br />	• <a href="Objects--Anchors.html">Anchors</a><br />	• <a href="Objects--Table_of_Contents.html">Table of Contents</a><br />	• <a href="Objects--Timestamps.html">Timestamps</a><br />	• <a href="Objects--Special_Characters.html">Special Characters</a><br />	• <a href="Objects--Horizontal_Rule.html">Horizontal Rule</a><br /><br /><br />	</div></div>
 </body></html>
