--- a/cherrytree_manual.ctb_HTML/Quick_Start.html
+++ b/cherrytree_manual.ctb_HTML/Quick_Start.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Quick Start</u></b></h1><br /><h1>Quick start</h1><br /><br /><br /><h2>	Content</h2><br />	• <a href="Quick_Start--Interface.html">Interface</a><br />		• <a href="Quick_Start--Interface.html#h3-2">Menu Bar</a><br />		• <a href="Quick_Start--Interface.html#h3-3">Toolbar</a><br />		• <a href="Quick_Start--Interface.html#h3-4">Tree View</a><br />		• <a href="Quick_Start--Interface.html#h3-5">Editor</a><br />		• <a href="Quick_Start--Interface.html#h3-6">Interface Options</a><br />	• <a href="Quick_Start--Node_Management.html">Node Management</a><br />		• <a href="Quick_Start--Node_Management.html#h3-2">Creating Your First Node</a><br />		• <a href="Quick_Start--Node_Management.html#h3-3">Node Menu</a><br />	• <a href="Quick_Start--Insert_Objects.html">Insert Objects</a><br />	• <a href="Quick_Start--Save_Your_Notes.html">Save Your Notes</a><br />	• <a href="Quick_Start--Export_a_Document.html">Export a Document</a><br /><br /><br /><br /><br /></div></div>
+<div class="page"><h1><b><u>Quick Start</u></b></h1><br /><h1>Quick start</h1><br /><br /><br /><h2>	Content</h2><br />	• <a href="Quick_Start--Interface.html">Interface</a><br />		• <a href="Quick_Start--Interface.html#h2-1">Menu Bar</a><br />		• <a href="Quick_Start--Interface.html#h2-2">Toolbar</a><br />		• <a href="Quick_Start--Interface.html#h2-3">Tree View</a><br />		• <a href="Quick_Start--Interface.html#h2-4">Editors</a><br />		• <a href="Quick_Start--Interface.html#h2-5">Interface Options</a><br />	• <a href="Quick_Start--Node_Management.html">Node Management</a><br />		• <a href="Quick_Start--Node_Management.html#h2-1">Creating Your First Node</a><br />		• <a href="Quick_Start--Node_Management.html#h2-2">Node Menu</a><br />	• <a href="Quick_Start--Insert_Objects.html">Insert Objects</a><br />	• <a href="Quick_Start--Save_Your_Notes.html">Save Your Notes</a><br />	• <a href="Quick_Start--Export_a_Document.html">Export a Document</a><br /><br /><br /><br /><br /></div></div>
 </body></html>
