--- a/cherrytree_manual.ctb_HTML/Settings--Keyboard_Shortcuts.html
+++ b/cherrytree_manual.ctb_HTML/Settings--Keyboard_Shortcuts.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,7 +95,7 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Keyboard Shortcuts</u></b></h1>Keyboard Shortcuts<br />The keyboard Shortcuts preferences menu provides configuration options for shortcuts to Cherrytree’s features.<br /><br /><a name="h3-96"></a><h3>Editing a Keyboard Shortcut</h3><br />1. Select a shortcut to edit.<br /><br />2. Click the edit shortcut button to display the Edit Keyboard Shortcut menu.<br />Figure 9.16<img src="images\56-1.png" alt="images\56-1.png" /><br /><br />3. Select No Keyboard Shortcut to remove a shortcut. Alternatively, toggle any of the three options: control, shift, and alt, and add one or more keys to the adjacent form to define the keyboard shortcut.<br /><br />4. Click OK to complete the edit.<br /><br /><br /><a name="h3-97"></a><h3>Reset Keyboard Shortcuts Settings</h3><br />Click the yellow return button to return to Cherrytree’s default shortcut settings.<br />Figure 9.17<img src="images\56-2.png" alt="images\56-2.png" /><br /><br /><a name="h3-98"></a><h3>Default Keyboard Shortcuts</h3><br /><table class="table"><col/><col/><tr><th>Key</th><th>Value</th></tr><tr><td></td><td>Start a New Instance of Cherrytree
+<div class="page"><h1><b><u>Keyboard Shortcuts</u></b></h1><br /><h1>Keyboard Shortcuts</h1><br /><br /><br />	The keyboard Shortcuts preferences menu provides configuration options for shortcuts to Cherrytree’s features.<br /><br /><a name="h2-1"></a><h2>Editing a Keyboard Shortcut</h2><br /><br />	1. Select a shortcut to edit.<br /><br />	2. Click the edit shortcut button to display the <strong>Edit Keyboard Shortcut </strong>menu.<br />	<br />		Figure 9.16<br />		<img src="images\56-1.png" alt="images\56-1.png" /><br /><br />	3. Select <strong>No Keyboard Shortcut</strong> to remove a shortcut. Alternatively, toggle any of the three options: <strong>control</strong>, <strong>shift</strong>, and <strong>alt</strong>, and add one or more keys to the adjacent form to define the keyboard shortcut.<br /><br />	4. Click <strong>OK</strong> to complete the edit.<br /><br /><br /><a name="h2-2"></a><h2>Reset Keyboard Shortcuts Settings</h2><br /><br />	Click the yellow return button to return to Cherrytree’s default shortcut settings.<br />	<br />	Figure 9.17<br />	<img src="images\56-2.png" alt="images\56-2.png" /><br /><br /><a name="h2-3"></a><h2>Default Keyboard Shortcuts</h2><br /><br />	<table class="table"><col/><col/><tr><th>Key</th><th>Value</th></tr><tr><td></td><td>Start a New Instance of Cherrytree
 </td></tr><tr><td>Ctrl+O
 </td><td>Open a New Cherrytree Document
 </td></tr><tr><td>Ctrl+S
