--- a/cherrytree_manual.ctb_HTML/Settings--Text.html
+++ b/cherrytree_manual.ctb_HTML/Settings--Text.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Text</u></b></h1><a name="h3-68"></a><h3>9.2. Text</h3><br />Enable Smart Quotes Auto Replacement - Converts paired quotation marks on a line to smart quotes, illustrated in <a href="http://#figure-9.03">Figure 9.03</a>.<br />Figure 9.03<img src="images\48-1.png" alt="images\48-1.png" /></div></div>
+<div class="page"><h1><b><u>Text</u></b></h1><br /><h1>Text</h1><br /><br /><br /><strong>	Enable Smart Quotes Auto Replacement</strong> - Converts paired quotation marks on a line to smart quotes, illustrated in <a href="Settings--Text.html#figure-9.03">Figure 9.03</a>.<br />	<br />	<a name="figure-9.03"></a> Figure 9.03<br />	<img src="images\48-1.png" alt="images\48-1.png" /></div></div>
 </body></html>
