--- a/cherrytree_manual.ctb_HTML/Settings--Tree_2.html
+++ b/cherrytree_manual.ctb_HTML/Settings--Tree_2.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Tree 2</u></b></h1>Tree 2<br />The Tree 2 preferences menu is a continuation of <a href="http://#_tree_1">Tree 1</a>, providing additional configuration options for the <a href="http://#tree-view">tree view</a> panel.<br /><br /><a name="h3-85"></a><h3>Miscellaneous</h3><br />• Tree Nodes Names Wrapping Width - Defines the width in pixels at which text begins to wrap within the <a href="http://#tree-view">tree view</a>.<br /><br />• Display Tree on Right Side - Moves the <a href="http://#tree-view">tree view</a> panel to the right side of the window.<br /><br />• Move Focus to Text at Mouse Click - When a node is selected, the editor becomes the active panel with the cursor positioned at the beginning of the first line.<br /><br />• Expand Node at Mouse Click - Collapsed nodes expand when they are selected within the <a href="http://#tree-view">tree view</a>.<br /><br />• Last Visited Nodes on Node Name Header - Defines the number of most recently visited nodes to display above the editor.<br />Figure 9.12<img src="images\52-1.png" alt="images\52-1.png" /><br /></div></div>
+<div class="page"><h1><b><u>Tree 2</u></b></h1><br /><h1>Tree 2</h1><br /><br /><br />	The <strong>Tree 2 </strong>preferences menu is a continuation of <a href="http://#_tree_1">Tree 1</a>, providing additional configuration options for the <a href="http://#tree-view">tree view</a> panel.<br /><br /><a name="h2-1"></a><h2>Miscellaneous</h2><br /><br />	• <strong>Tree Nodes Names Wrapping Width</strong> - Defines the width in pixels at which text begins to wrap within the <a href="http://#tree-view">tree view</a>.<br /><br />	• <strong>Display Tree on Right Side </strong>- Moves the <a href="http://#tree-view">tree view</a> panel to the right side of the window.<br /><br />	• <strong>Move Focus to Text at Mouse Click </strong>- When a node is selected, the editor becomes the active panel with the cursor positioned at the beginning of the first line.<br /><br />	• <strong>Expand Node at Mouse Click - </strong>Collapsed nodes expand when they are selected within the <a href="http://#tree-view">tree view</a>.<br /><br />	• <strong>Last Visited Nodes on Node Name Header</strong> - Defines the number of most recently visited nodes to display above the editor.<br />	<br />		Figure 9.12<br />		<img src="images\52-1.png" alt="images\52-1.png" /><br />	</div></div>
 </body></html>
