--- a/cherrytree_manual.ctb_HTML/Settings.html
+++ b/cherrytree_manual.ctb_HTML/Settings.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Settings</u></b></h1><br />▸ <a href="Settings.html">Settings</a><br />  ▸ <a href="Settings--Text_and_Code.html">Text and Code</a><br />  ▸ <a href="Settings--Text.html">Text</a><br />  ▸ <a href="Settings--Rich_Text.html">Rich Text</a><br />  ▸ <a href="Settings--Plain_Text_and_Code.html">Plain Text and Code</a><br />  ▸ <a href="Settings--Tree_1.html">Tree 1</a><br />  ▸ <a href="Settings--Tree_2.html">Tree 2</a><br />  ▸ <a href="Settings--Fonts.html">Fonts</a><br />  ▸ <a href="Settings--Links.html">Links</a><br />  ▸ <a href="Settings--Toolbar.html">Toolbar</a><br />  ▸ <a href="Settings--Keyboard_Shortcuts.html">Keyboard Shortcuts</a><br />  ▸ <a href="Settings--Miscellaneous.html">Miscellaneous</a><br /><br /></div></div>
+<div class="page"><h1><b><u>Settings</u></b></h1><br /><h1>Settings</h1><br /><br /><br /><h2>	Content</h2><br />	• <a href="Settings--Text_and_Code.html">Text and Code</a><br />	• <a href="Settings--Text.html">Text</a><br />	• <a href="Settings--Rich_Text.html">Rich Text</a><br />	• <a href="Settings--Plain_Text_and_Code.html">Plain Text and Code</a><br />	• <a href="Settings--Tree_1.html">Tree 1</a><br />	• <a href="Settings--Tree_2.html">Tree 2</a><br />	• <a href="Settings--Fonts.html">Fonts</a><br />	• <a href="Settings--Links.html">Links</a><br />	• <a href="Settings--Toolbar.html">Toolbar</a><br />	• <a href="Settings--Keyboard_Shortcuts.html">Keyboard Shortcuts</a><br />	• <a href="Settings--Miscellaneous.html">Miscellaneous</a><br /><br /></div></div>
 </body></html>
