--- a/cherrytree_manual.ctb_HTML/Text--Plain_Text.html
+++ b/cherrytree_manual.ctb_HTML/Text--Plain_Text.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Plain Text</u></b></h1>Plain Text<br />Plain Text consist of UTF-8 characters and is more portable than Rich Text but does not support images, links, or formatting.<br /></div></div>
+<div class="page"><h1><b><u>Plain Text</u></b></h1><br /><h1>Plain Text</h1><br /><br /><br />	Plain Text consist of UTF-8 characters and is more portable than Rich Text but does not support images, links, or formatting.<br /></div></div>
 </body></html>
