--- a/cherrytree_manual.ctb_HTML/Text--Rich_Text.html
+++ b/cherrytree_manual.ctb_HTML/Text--Rich_Text.html
@@ -46,11 +46,12 @@
 <li><a href="Files--Importing.html">Importing</a></li>
 <li><a href="Files--Exporting.html">Exporting</a></li>
 <li><a href="Files--Command_Line.html">Command Line</a></li>
-<li><a href="Files--Nodes.html">Nodes</a></li>
-<ol>
-<li><a href="Files--Nodes--Creating_Nodes.html">Creating Nodes</a></li>
-<li><a href="Files--Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
+<p><a href="Nodes.html">Nodes</a></p>
+
+<ol>
+<li><a href="Nodes--Creating_Nodes.html">Creating Nodes</a></li>
+<li><a href="Nodes--Managing_Nodes.html">Managing Nodes</a></li>
 </ol>
 <p><a href="Text.html">Text</a></p>
 
@@ -94,5 +95,5 @@
 <p><a href="License.html">License</a></p>
 
 </div>
-<div class="page"><h1><b><u>Rich Text</u></b></h1>Rich Text<br />Rich Text nodes have the same functionality as Plain Text and can also include text style, size, and color. In Cherrytree they also allow objects such as images, codeboxes, and tables.<br /><table class="table"><col/><col/><tr><th>click me</th><th>click me</th></tr><tr><td></td><td>See 8. Objects for more details.</td></tr></table><br /></div></div>
+<div class="page"><h1><b><u>Rich Text</u></b></h1><br /><h1>Rich Text</h1><br /><br /><br />	Rich Text nodes have the same functionality as Plain Text and can also include text style, size, and color. In Cherrytree they also allow objects such as images, codeboxes, and tables.<br />	<br />	See <a href="Objects.html">Objects</a> for more details.<br /></div></div>
 </body></html>
